[tool.poetry]
name = "scrapy-urlglob"
version = "0.1.0"
description = "Expand start urls using curl-like url globbing sequence"
authors = ["divtiply"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
